# Copyright (c) 2022 Mark Friedenbach
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    defines = select({
        "@bazel_tools//src/conditions:windows": ["WIN32"],
        "//conditions:default": [],
    }),
    hdrs = [
        "compat/byteswap.h",
        "compat/cpuid.h",
        "compat/endian.h",
        "crypto/common.h",
        "support/allocators/secure.h",
        "support/cleanse.h",
        "support/lockedpool.h",
        "util/macros.h",
    ],
    srcs = [
        "support/cleanse.cc",
        "support/lockedpool.cc",
    ],
)

cc_library(
    name = "chacha20",
    hdrs = [
        "crypto/chacha20.h",
    ],
    srcs = [
        "crypto/chacha20.cc",
    ],
    deps = [
        ":common",
    ],
)

cc_library(
    name = "random",
    defines = select({
        "@bazel_tools//src/conditions:windows": ["WIN32"],
        "//conditions:default": [],
    }),
    hdrs = [
        "random.h",
        "randomenv.h",
    ],
    srcs = [
        "random.cc",
        "randomenv.cc",
    ],
    deps = [
        "@com_google_absl//absl/time:time",
        ":chacha20",
        ":sha2",
        ":sync",
        ":uint256",
    ],
)

cc_library(
    name = "sha2",
    copts = select({
        "@platforms//cpu:x86_64": [
            "-msse4",
            "-msse4.1",
            "-mavx2",
            "-msha",
        ],
        "//conditions:default": [],
    }),
    hdrs = [
        "crypto/hmac_sha512.h",
        "crypto/sha256.h",
        "crypto/sha512.h",
    ],
    srcs = [
        "crypto/hmac_sha512.cc",
        "crypto/sha256.cc",
        "crypto/sha256_sse4.cc",
        "crypto/sha256_sse41.cc",
        "crypto/sha256_avx2.cc",
        "crypto/sha256_shani.cc",
        "crypto/sha512.cc",
    ],
    deps = [
        ":common",
    ],
)

cc_library(
    name = "sync",
    hdrs = [
        "sync.h",
        "threadsafety.h",
    ],
    srcs = [
        "sync.cc",
    ],
    deps = [
        ":common",
    ],
)

cc_library(
    name = "uint256",
    hdrs = [
        "uint256.h",
    ],
    srcs = [
        "uint256.cc",
    ],
    deps = [
        "@com_google_absl//absl/strings:strings",
    ],
)

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "webminer",
    srcs = ["main.cc"],
    deps = [
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/strings:strings",
        ":cpp_http",
        ":random",
        ":sha2",
        ":uint256",
        ":univalue",
    ],
)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

cmake(
    name = "cpp_http",
    deps = [
        "@boringssl//:ssl",
    ],
    lib_source = "@cpp_http//:all_srcs",
    install = True,
    out_headers_only = True,
)

configure_make(
    name = "univalue",
    configure_in_place = True, # Required by autogen=True
    autogen = True,
    env = {
        "AR": "",
    },
    lib_source = "@univalue//:all_srcs",
    out_static_libs = ["libunivalue.a"],
)

# End of File
